fix: sidebar collapse arrow orientation when collapsed (#1)
* fix: sidebar collapse arrow orientation when collapsed

* add animations

--- a/features/layout/sidebar-navigation/menu-item-link.module.scss
+++ b/features/layout/sidebar-navigation/menu-item-link.module.scss
@@ -1,5 +1,6 @@
 @use "@styles/color";
 @use "@styles/space";
+@use "@styles/animations";
 
 .listItem {
   height: space.$s12;
@@ -9,6 +10,11 @@
   padding: space.$s0 space.$s3;
   background: transparent;
   border-radius: 6px;
+  transition: animations.$transition-config;
+
+  &:hover {
+    background-color: color.$gray-700;
+  }
 }
 
 .listItem.active {
@@ -29,4 +35,8 @@
 .icon {
   width: space.$s6;
   margin-right: space.$s3;
+}
+
+.reverse {
+  transform: rotate(180deg);
 }
