--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -3,12 +3,14 @@
 @use "@styles/breakpoint";
 @use "@styles/z-index";
 @use "@styles/misc";
+@use "@styles/animations";
 
 .container,
 .fixedContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
+  transition: animations.$transition-config;
 
   @media (min-width: breakpoint.$desktop) {
     width: 17.5rem;
@@ -137,5 +139,9 @@
 
   @media (min-width: breakpoint.$desktop) {
     display: flex;
+
+    img {
+      transition: animations.$transition-config;
+    }
   }
 }
